--- a/src/Systems/Sidebar/Sidebar.scss
+++ b/src/Systems/Sidebar/Sidebar.scss
@@ -19,6 +19,8 @@
             margin-top: 15px;
             font-size: 20px;
             font-weight: 700;
+            display: flex;
+            align-items: center;
         }
     }
 
