--- a/src/pages/AdminPage/AdminPage.scss
+++ b/src/pages/AdminPage/AdminPage.scss
@@ -14,6 +14,10 @@
         'sidebar header header header'
         'sidebar main main main';
     height: 100vh;
+
+    // .container-admin {
+    //     width: 100%;
+    // }
 }
 
 .icon {
