CRUD Ql nhãn hàng - done

--- a/src/components/ModalDelete/ModalDelete.scss
+++ b/src/components/ModalDelete/ModalDelete.scss
@@ -11,6 +11,9 @@
             }
             .custom-modal-body {
                 font-size: 20px;
+                .red {
+                    color: red;
+                }
             }
             .custom-modal-footer {
                 button {
