CRUD QL sản phẩm - hình ảnh

--- a/src/Systems/HeaderAdmin/HeaderAdmin.scss
+++ b/src/Systems/HeaderAdmin/HeaderAdmin.scss
@@ -13,6 +13,13 @@
     display: none;
 }
 
+.header-left {
+    height: 100%;
+    img {
+        height: 100%;
+    }
+}
+
 .header-right {
     .icon {
         margin-right: 15px;
