--- a/src/Systems/ManageProductImage/ManageProductImage.scss
+++ b/src/Systems/ManageProductImage/ManageProductImage.scss
@@ -1,6 +1,6 @@
 @import '../../App.scss';
 
-.manage-product-container {
+.manage-product-image-container {
     grid-area: main;
     overflow-y: auto;
     padding: 20px 20px;
@@ -12,33 +12,13 @@
         font-weight: 600;
     }
 
-    .product-search {
-        margin-top: 30px;
-        .product-search-body {
-            width: 500px;
-            display: flex;
-            align-items: center;
-            border: 1px solid rgb(137, 137, 137);
-            border-radius: 10px;
-            padding: 5px 10px;
-
-            input {
-                font-size: 20px;
-                flex: 1;
-                padding: 5px;
-            }
-        }
-
-        padding: 0 50px;
-    }
-
-    .product-header {
+    .product-image-header {
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 0 50px;
         margin: 40px 0 20px 0;
-        .product-title {
+        .product-image-title {
             h3 {
                 font-size: 24px;
                 color: rgb(0, 0, 255);
@@ -66,7 +46,17 @@
         }
     }
 
-    .product-body {
+    .product-image-body {
+        .box-image {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            img {
+                width: 100%;
+                height: 150px;
+                object-fit: contain;
+            }
+        }
         .btn-action {
             button {
                 font-size: 20px;
@@ -91,7 +81,7 @@
         }
     }
 
-    .product-footer {
+    .product-image-footer {
         margin: auto;
         width: 42%;
         .pagination {
