--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -4,6 +4,44 @@
 .main-content {
     min-height: 100vh;
 
+    .list-brand {
+        padding-top: 50px;
+        display: flex;
+        flex-wrap: wrap;
+
+        .list-brand_item {
+            align-items: center;
+            border: 1px solid #d1d1d1;
+            border-radius: 4px;
+            display: flex;
+            height: 48px;
+            width: 137px;
+            justify-content: center;
+            margin: 0 20px 10px 0;
+            padding: 2px 4px;
+
+            &:hover {
+                transition: 0.2s all ease-in-out;
+                transform: scale(1.05);
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+
+    .categories {
+        .categories-item {
+            margin-bottom: 4.8rem !important;
+
+            .title-md {
+                margin-bottom: 2.8rem;
+            }
+        }
+    }
+
     .product-footer {
         margin: auto;
         width: 30%;
@@ -19,15 +57,6 @@
                     padding: 10px 20px;
                 }
             }
-        }
-    }
-}
-.categories {
-    .categories-item {
-        margin-bottom: 4.8rem !important;
-
-        .title-md {
-            margin-bottom: 2.8rem;
         }
     }
 }
