--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -17,6 +17,7 @@
     .product-footer {
         margin: auto;
         width: 30%;
+        margin-bottom: 50px;
         .pagination {
             .page-item {
                 &.active {
