--- a/src/components/HeaderSlider/HeaderSlider.scss
+++ b/src/components/HeaderSlider/HeaderSlider.scss
@@ -8,7 +8,7 @@
 
         .slider-item {
             width: 100%;
-            max-height: 300px;
+            height: 300px;
             overflow: hidden;
             box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.1), 0 2px 6px 2px rgba(60, 64, 67, 0.15);
 
