--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -102,7 +102,9 @@
         .cart-btn {
             position: relative;
             font-size: 35px;
-            padding: 1px 10px;
+            a {
+                padding: 5px 10px;
+            }
             .cart-items-value {
                 position: absolute;
                 top: 5px;
