--- a/src/components/UserModal/UserModal.scss
+++ b/src/components/UserModal/UserModal.scss
@@ -25,7 +25,7 @@
             }
 
             &:hover {
-                background-color: #cfcfcf;
+                background-color: #ececec;
                 color: black;
             }
         }
