--- a/src/components/UserModal/UserModal.scss
+++ b/src/components/UserModal/UserModal.scss
@@ -10,6 +10,7 @@
     border-radius: 10px;
     box-shadow: rgba(100, 100, 111, 0.25) 0px 7px 29px 0px;
     z-index: 99;
+    transition: all 0.5s ease-in-out;
 
     ul {
         display: flex;
