--- a/src/components/NotificationModal/NotificationModal.scss
+++ b/src/components/NotificationModal/NotificationModal.scss
@@ -6,6 +6,8 @@
     right: 0px;
     background: white;
     width: 240px;
+    max-height: 300px;
+    height: 300px;
     color: black;
     border-radius: 10px;
     box-shadow: rgba(100, 100, 111, 0.25) 0px 7px 29px 0px;
@@ -68,5 +70,13 @@
                 background-color: #ececec;
             }
         }
+    }
+
+    .no-notifi {
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        display: flex;
+        font-size: 16px;
     }
 }
