--- a/src/Systems/ManageOrder/ManageOrder.scss
+++ b/src/Systems/ManageOrder/ManageOrder.scss
@@ -69,6 +69,12 @@
             tr {
                 padding: 15px;
             }
+
+            .text-center {
+                margin: auto;
+                height: 100px;
+                text-align: center;
+            }
         }
     }
 
@@ -81,7 +87,7 @@
 
         .select-search {
             border: 1px solid rgb(176, 176, 176);
-            padding: 3px 6px;
+            padding: 4px 20px;
         }
     }
 
