--- a/src/Systems/ManageWarranty/ManageWarranty.scss
+++ b/src/Systems/ManageWarranty/ManageWarranty.scss
@@ -1,6 +1,6 @@
 @import '../../App.scss';
 
-.manage-product-container {
+.manage-warranty-container {
     grid-area: main;
     overflow-y: auto;
     padding: 20px 20px;
@@ -12,33 +12,13 @@
         font-weight: 600;
     }
 
-    .product-search {
-        margin: 20px 0;
-        .product-search-body {
-            width: 500px;
-            display: flex;
-            align-items: center;
-            border: 1px solid rgb(137, 137, 137);
-            border-radius: 10px;
-            padding: 0px 10px;
-
-            input {
-                font-size: 20px;
-                flex: 1;
-                padding: 5px;
-            }
-        }
-
-        padding: 0 50px;
-    }
-
-    .product-header {
+    .warranty-header {
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 0 50px;
         margin: 40px 0 20px 0;
-        .product-title {
+        .warranty-title {
             h3 {
                 font-size: 24px;
                 color: rgb(0, 0, 255);
@@ -66,7 +46,27 @@
         }
     }
 
-    .product-body {
+    .warranty-search {
+        margin: 20px 0;
+        .warranty-search-body {
+            width: 400px;
+            display: flex;
+            align-items: center;
+            border: 1px solid rgb(137, 137, 137);
+            border-radius: 10px;
+            padding: 0px 10px;
+
+            input {
+                font-size: 20px;
+                flex: 1;
+                padding: 5px;
+            }
+        }
+
+        padding: 0 50px;
+    }
+
+    .warranty-body {
         .btn-action {
             button {
                 font-size: 20px;
@@ -91,7 +91,7 @@
         }
     }
 
-    .product-footer {
+    .warranty-footer {
         margin: auto;
         width: 42%;
         .pagination {
