- chức năng in phiếu bảo hành

--- a/src/Systems/ManageImportReceipt/ManageImportReceipt.scss
+++ b/src/Systems/ManageImportReceipt/ManageImportReceipt.scss
@@ -71,7 +71,7 @@
             }
 
             .text-center {
-                margin: auto;
+                // margin: auto;
                 height: 100px;
                 text-align: center;
             }
