--- a/src/Systems/ManageWarranty/ManageWarranty.scss
+++ b/src/Systems/ManageWarranty/ManageWarranty.scss
@@ -48,6 +48,10 @@
 
     .warranty-search {
         margin: 20px 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 50px;
         .warranty-search-body {
             width: 400px;
             display: flex;
@@ -63,7 +67,16 @@
             }
         }
 
-        padding: 0 50px;
+        .date-search {
+            font-size: 20px;
+            display: flex;
+            gap: 15px;
+
+            .input-search {
+                border: 1px solid rgb(176, 176, 176);
+                padding: 4px 20px;
+            }
+        }
     }
 
     .warranty-body {
@@ -89,6 +102,10 @@
                 padding: 15px;
             }
         }
+    }
+
+    .box-warranty {
+        display: none;
     }
 
     .warranty-footer {
