--- a/src/Systems/ManageWarranty/WarrantyPrint.scss
+++ b/src/Systems/ManageWarranty/WarrantyPrint.scss
@@ -13,7 +13,7 @@
 
 .warranty-print {
     margin: 100px auto 0 auto;
-    height: 70%;
+    height: 75%;
     width: 65%;
     padding: 20px;
     border: 1px solid rgb(94, 94, 94);
@@ -95,6 +95,6 @@
         display: flex;
         justify-content: space-between;
         padding: 0 80px;
-        margin-top: 30px;
+        margin: 30px 0 100px 0;
     }
 }
