-chức năng in phiếu mua hàng

--- a/src/Systems/ManageOrder/ManageOrder.scss
+++ b/src/Systems/ManageOrder/ManageOrder.scss
@@ -78,6 +78,10 @@
         }
     }
 
+    .box-order {
+        display: none;
+    }
+
     .box-search {
         font-size: 20px;
         display: flex;
