--- a/src/Systems/ManageImportReceipt/ManageImportReceipt.scss
+++ b/src/Systems/ManageImportReceipt/ManageImportReceipt.scss
@@ -78,6 +78,10 @@
         }
     }
 
+    .box-import-receipt {
+        display: none;
+    }
+
     .box-search {
         font-size: 20px;
         display: flex;
