--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,137 +1,149 @@
 @import '../../App.scss';
 
 .header {
-    background: rgb(249, 78, 48);
-    background: linear-gradient(180deg, rgba(249, 78, 48, 1) 0%, rgba(255, 100, 51, 1) 100%);
+    background: $clr-red;
 
-    .header-cnt-top {
-        border-bottom: 1px solid lighten($clr-orange, 10%);
+    .header-cnt {
+        // display: flex;
 
-        .header-cnt-top-l {
-            .box-follow {
-                a {
-                    display: flex;
-                    align-items: center;
-                    gap: 8px;
-                    margin-bottom: 1px;
-                    &:hover {
-                        color: white;
-                        transform: scale(1.05);
-                        transition: all 0.3s ease-in-out;
-                    }
-                }
-            }
-            .box-support {
-                display: flex;
-                .top-link-itm {
-                    &:hover {
-                        color: white;
-                        transform: scale(1.05);
-                        transition: all 0.3s ease-in-out;
-                    }
-                }
-            }
+        .header-logo {
+            width: 50px;
+            height: 50px;
         }
 
-        .header-cnt-top-r {
-            .box-notify {
-                display: flex;
-                position: relative;
-                a {
-                    &:hover {
-                        color: white;
-                    }
-                }
+        .header-cnt-top {
+            border-bottom: 1px solid white;
 
-                .icon-notify {
-                    position: relative;
-
-                    .icon-notify-value {
-                        position: absolute;
-                        top: -2px;
-                        right: -4px;
-                        border: 0.5px solid rgb(214, 214, 214);
-                        background-color: $clr-white;
-                        font-size: 12px;
-                        font-weight: 500;
-                        color: $clr-orange;
-                        padding: 0 0.5rem;
-                        width: 20px;
-                        border-radius: 50%;
+            .header-cnt-top-l {
+                .box-follow {
+                    a {
                         display: flex;
                         align-items: center;
-                        justify-content: center;
+                        gap: 8px;
+                        margin-bottom: 1px;
+                        &:hover {
+                            color: white;
+                            transform: scale(1.05);
+                            transition: all 0.3s ease-in-out;
+                        }
                     }
                 }
-
-                &::before {
-                    content: '';
-                    position: absolute;
-                    width: 150px;
-                    height: 30px;
-                    background-color: transparent;
-                    top: 20px;
-                }
-
-                &:hover {
-                    .notification-modal {
-                        opacity: 1;
-                        visibility: visible;
-                    }
-                }
-            }
-            .box-user {
-                display: flex;
-                align-items: center;
-                position: relative;
-                cursor: pointer;
-                .icon {
-                    width: 35px;
-                    height: 35px;
-                    margin-right: 6px;
-                    img {
-                        object-fit: cover;
-                    }
-                }
-
-                &::before {
-                    content: '';
-                    position: absolute;
-                    width: 150px;
-                    height: 30px;
-                    background-color: transparent;
-                    top: 20px;
-                }
-
-                &:hover {
-                    .user-modal {
-                        opacity: 1;
-                        visibility: visible;
-                    }
-                }
-            }
-            .box-action {
-                display: flex;
-                .top-link-itm:hover {
-                    color: white !important;
-                }
-            }
-            .box-support {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                .top-link-itm-ico {
-                    font-size: 20px;
-                }
-                a {
+                .box-support {
                     display: flex;
+                    .top-link-itm {
+                        &:hover {
+                            color: white;
+                            transform: scale(1.05);
+                            transition: all 0.3s ease-in-out;
+                        }
+                    }
+                }
+            }
+
+            .header-cnt-top-r {
+                .box-notify {
+                    display: flex;
+                    position: relative;
+                    a {
+                        &:hover {
+                            color: white;
+                        }
+                    }
+
+                    .icon-notify {
+                        position: relative;
+
+                        .icon-notify-value {
+                            position: absolute;
+                            top: -2px;
+                            right: -4px;
+                            border: 0.5px solid rgb(214, 214, 214);
+                            background-color: $clr-white;
+                            font-size: 12px;
+                            font-weight: 500;
+                            color: $clr-orange;
+                            padding: 0 0.5rem;
+                            width: 20px;
+                            border-radius: 50%;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                        }
+                    }
+
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        width: 150px;
+                        height: 30px;
+                        background-color: transparent;
+                        top: 20px;
+                    }
+
+                    &:hover {
+                        .notification-modal {
+                            opacity: 1;
+                            visibility: visible;
+                        }
+                    }
+                }
+                .box-user {
+                    display: flex;
+                    align-items: center;
+                    position: relative;
+                    cursor: pointer;
+                    .icon {
+                        width: 35px;
+                        height: 35px;
+                        margin-right: 6px;
+                        img {
+                            object-fit: cover;
+                        }
+                    }
+
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        width: 150px;
+                        height: 30px;
+                        background-color: transparent;
+                        top: 20px;
+                    }
+
+                    &:hover {
+                        .user-modal {
+                            opacity: 1;
+                            visibility: visible;
+                        }
+                    }
+                }
+                .box-action {
+                    display: flex;
+                    .top-link-itm:hover {
+                        color: white !important;
+                    }
+                }
+                .box-support {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    .top-link-itm-ico {
+                        font-size: 20px;
+                    }
+                    a {
+                        display: flex;
+                    }
                 }
             }
         }
     }
 
     @media screen and (max-width: 992px) {
+    }
+
+    @media screen and (max-width: 768px) {
+        // từ 576 -> 768
         .header-cnt-top {
             flex-direction: column;
             .header-cnt-top-l {
