--- a/src/components/HeaderSlider/HeaderSlider.scss
+++ b/src/components/HeaderSlider/HeaderSlider.scss
@@ -22,6 +22,7 @@
 
     .slider-right {
         display: flex;
+        justify-content: space-around;
         flex-direction: column;
         gap: 35px;
         width: 25%;
@@ -29,6 +30,28 @@
 
         .slider-item-right {
             box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.1), 0 2px 6px 2px rgba(60, 64, 67, 0.15);
+        }
+    }
+
+    @media screen and (max-width: 992px) {
+        // từ 768 -> 992
+        .slider-content-main {
+            width: 100%;
+        }
+
+        .slider-right {
+            display: none;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        // từ 576 -> 768
+    }
+
+    @media screen and (max-width: 576px) {
+        // nhỏ hơn 576
+        .product-footer {
+            width: 92%;
         }
     }
 }
