--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -20,21 +20,6 @@
                     opacity: 0.7;
                 }
             }
-
-            .navbar-brand {
-                display: flex;
-                align-items: center;
-                font-size: 2.4rem;
-
-                .navbar-brand-txt {
-                    margin: 0 8px;
-                }
-
-                &:hover {
-                    opacity: 0.8;
-                    color: white;
-                }
-            }
         }
 
         .navbar-collapse-body {
@@ -140,6 +125,24 @@
                     visibility: visible;
                 }
             }
+        }
+    }
+
+    @media screen and (max-width: 992px) {
+        // từ 768 -> 992
+        .box-logo {
+            display: none;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        // từ 576 -> 768
+    }
+
+    @media screen and (max-width: 576px) {
+        // nhỏ hơn 576
+        .product-footer {
+            width: 92%;
         }
     }
 }
