Chức năng thanh toán online: VnPay

--- a/src/components/ModalOrder/ModalOrder.scss
+++ b/src/components/ModalOrder/ModalOrder.scss
@@ -3,6 +3,7 @@
 .custom-modal-order {
     .modal-dialog {
         max-width: 800px; /* Định kích thước modal */
+        margin: auto;
         // height: 750px;
         .modal-content {
             height: 80%;
