- sửa lại giao diện

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 // variables
 $clr-black: #000;
 $clr-white: #fff;
+$clr-orange-light: #f07d22;
 $clr-orange: #f94e30;
 $clr-red: #d70018;
 $clr-light-orange: #ff6433;
