--- a/src/Systems/ManageProductImage/ModalProductImage.scss
+++ b/src/Systems/ManageProductImage/ModalProductImage.scss
@@ -1,9 +1,9 @@
-.custom-modal {
+.custom-modal-product-image {
     .modal-dialog {
         max-width: 700px;
         height: 100%;
         .modal-content {
-            height: 95%;
+            // height: 110%;
             .custom-modal-header {
                 .modal-title {
                     font-size: 25px;
