--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -46,7 +46,7 @@
                     }
                 }
                 .search-btn {
-                    background-color: $clr-orange;
+                    background-color: $clr-orange-light;
                     width: 85px;
                     height: 40px;
                     margin-right: 18px;
