--- a/src/Systems/SidebarAdmin/SidebarAdmin.scss
+++ b/src/Systems/SidebarAdmin/SidebarAdmin.scss
@@ -21,6 +21,12 @@
             font-weight: 700;
             display: flex;
             align-items: center;
+
+            a {
+                &:hover {
+                    color: white;
+                }
+            }
         }
     }
 
