--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,8 @@
-.footer{
-    .copyright-text{
+@import '../../App.scss';
+.footer {
+    .copyright-text {
         display: block;
         margin-top: 0.7rem;
     }
+    background: $clr-orange-light;
 }
