--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 @import '../../App.scss';
 
 .header {
-    background: $clr-red;
+    background: $clr-orange-light;
 
     .header-cnt {
         // display: flex;
