--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -1,17 +1,17 @@
-@import "../../App.scss";
+@import '../../App.scss';
 
 .account-pages {
     height: 800px;
     margin-bottom: 20px;
 
     .title {
-        color: $clr-orange;
+        color: $clr-orange-light;
         font-size: 35px;
         font-weight: 600;
     }
 
     .btn-register {
-        background-color: $clr-orange;
+        background-color: $clr-orange-light;
         color: white;
         font-size: 20px;
     }
