- chức năng update profile (user) - chức năng xem ds đơn mua hàng (user)

--- a/src/components/UserModal/UserModal.scss
+++ b/src/components/UserModal/UserModal.scss
@@ -26,8 +26,7 @@
             }
 
             &:hover {
-                background-color: #ececec;
-                color: black;
+                color: #4ec2ce;
             }
         }
     }
