--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -96,6 +96,8 @@
                         width: 35px;
                         height: 35px;
                         margin-right: 6px;
+                        border: 0.8px solid white;
+                        border-radius: 50%;
                         img {
                             object-fit: cover;
                         }
