- chức năng hủy đơn mua hàng (done) - chức năng đổi mật khẩu (done)

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ $clr-white: #fff;
 $clr-orange-light: #f07d22;
 $clr-orange: #f94e30;
 $clr-red: #d70018;
+$clr-red-light: #ee4d2d;
 $clr-light-orange: #ff6433;
 $clr-light-gray: #f2f2f2;
 $clr-light: #f4f4f4;
