- sửa lại chức năng lọc sp theo giá - chức năng gửi feedback (done)

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -121,6 +121,7 @@
                 }
                 .box-action {
                     display: flex;
+                    align-items: center;
                     .top-link-itm:hover {
                         color: white !important;
                     }
