--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,8 @@ $clr-light: #f4f4f4;
 $clr-whitesmoke: #f5f5f5;
 $clr-dark: #212529;
 $clr-danger: #dc3545;
-$clr-gray: #d1d1d1;
+$clr-gray-light: #d1d1d1;
+$clr-gray: #626262;
 $font-family-manrope: 'Manrope', sans-serif;
 $font-family-poppins: 'Poppins', sans-serif;
 $transition-ease: all 300ms ease-in-out;
@@ -29,10 +30,10 @@ $transition-ease: all 300ms ease-in-out;
 }
 
 body::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
 }
 body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 0 6px rgba(119, 119, 119, 0.1);
     border-radius: 10px;
 }
 body::-webkit-scrollbar-thumb {
@@ -177,6 +178,9 @@ select {
     }
     &-light-gray {
         color: $clr-light-gray;
+    }
+    &-gray {
+        color: $clr-gray;
     }
     &-whitesmoke {
         color: $clr-whitesmoke;
@@ -467,7 +471,7 @@ select {
 // liness
 .vert-line {
     width: 2px;
-    background-color: lighten($clr-orange, 10%);
+    background-color: white;
     height: 16px;
     margin: 0 12px;
 }
