--- a/src/components/BrandList/BrandList.scss
+++ b/src/components/BrandList/BrandList.scss
@@ -3,6 +3,12 @@
     display: flex;
     flex-wrap: wrap;
 
+    @media screen and (max-width: 576px) {
+        // nhỏ hơn 576
+        padding: 0;
+        gap: 10px;
+    }
+
     .list-brand_item {
         align-items: center;
         border: 1px solid #d1d1d1;
@@ -13,6 +19,11 @@
         justify-content: center;
         margin: 0 20px 10px 0;
         padding: 2px 4px;
+
+        @media screen and (max-width: 576px) {
+            // nhỏ hơn 576
+            margin: 0 15px 10px 0;
+        }
 
         &:hover {
             transition: 0.2s all ease-in-out;
