--- a/src/components/HeaderSlider/HeaderSlider.scss
+++ b/src/components/HeaderSlider/HeaderSlider.scss
@@ -6,6 +6,11 @@
         width: 75%;
         margin-right: 20px;
 
+        @media screen and (max-width: 992px) {
+            // nhỏ hơn 576
+            margin-right: 0;
+        }
+
         .slider-item {
             width: 100%;
             height: 300px;
@@ -16,6 +21,11 @@
                 width: 100%;
                 height: 100%;
                 object-fit: contain;
+            }
+
+            @media screen and (max-width: 576px) {
+                // nhỏ hơn 576
+                height: 130px;
             }
         }
     }
