--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -83,6 +83,17 @@
         border-radius: 50%;
         font-size: 2rem;
 
+        .navbar-search-icon {
+            margin-right: 10px;
+            @media screen and (max-width: 576px) {
+                display: block;
+            }
+
+            @media screen and (min-width: 577px) {
+                display: none;
+            }
+        }
+
         .cart-btn {
             position: relative;
             font-size: 35px;
@@ -129,9 +140,6 @@
 
     @media screen and (max-width: 992px) {
         // từ 768 -> 992
-        .box-logo {
-            display: none;
-        }
     }
 
     @media screen and (max-width: 768px) {
