--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,12 +1,49 @@
 @import '../../App.scss';
 
 .account-pages {
-    height: 78vh;
+    height: 60vh;
+
+    @media screen and (max-width: 576px) {
+        height: 460px;
+    }
+
+    @media screen and (max-width: 992px) {
+        // từ 768 -> 992
+        height: 550px;
+    }
+
+    @media screen and (max-width: 768px) {
+        // từ 576 -> 768
+        height: 550px;
+    }
 
     .title {
         color: $clr-orange-light;
         font-size: 35px;
         font-weight: 600;
+    }
+
+    .box-forget-password {
+        @media screen and (max-width: 576px) {
+            margin: 10px 0;
+        }
+    }
+
+    .form-check {
+        @media screen and (max-width: 576px) {
+            margin: 55px 0 30px 0;
+        }
+    }
+
+    .input-group {
+        @media screen and (max-width: 576px) {
+            span {
+                font-size: 18px;
+            }
+            input {
+                font-size: 18px;
+            }
+        }
     }
 
     .btn-login {
