--- a/src/components/NotificationModal/NotificationModal.scss
+++ b/src/components/NotificationModal/NotificationModal.scss
@@ -15,6 +15,10 @@
     transition: all 0.5s ease-in-out;
     overflow: hidden;
 
+    @media screen and (max-width: 576px) {
+        right: -100px;
+    }
+
     .body {
         display: flex;
         flex-direction: column;
