--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -52,7 +52,10 @@
 
     .product-footer {
         margin: auto;
-        width: 90vw;
+        @media screen and (max-width: 1545px) {
+            width: 90vw;
+        }
+
         margin-bottom: 50px;
         .pagination {
             justify-content: center;
