--- a/src/Systems/HomeAdmin/HomeAdmin.scss
+++ b/src/Systems/HomeAdmin/HomeAdmin.scss
@@ -1,19 +1,16 @@
+@import '../../App.scss';
+
 .main-container {
     grid-area: main;
     overflow-y: auto;
     padding: 20px 20px;
     color: rgba(255, 255, 255, 0.95);
 
-    .main-title {
-        display: flex;
-        justify-content: space-between;
-    }
-
     .main-cards {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         gap: 20px;
-        margin: 15px 0;
+        margin: 30px 0 15px 0;
 
         .card {
             display: flex;
@@ -51,9 +48,15 @@
 
     .charts {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
+        width: 79vw;
         margin-top: 60px;
-        height: 300px;
+        height: 500px;
+
+        .title-charts {
+            color: $clr-orange;
+            text-align: center;
+            font-size: 24px;
+            font-weight: 600;
+        }
     }
 }
